Fix: Added --break-system-packages to pip Flask install

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -4,20 +4,17 @@ FROM mcr.microsoft.com/devcontainers/base:debian
 # Avoid interactive prompts during install
 ENV DEBIAN_FRONTEND=noninteractive
 
-# Update and install dependencies
-RUN apt-get update && apt-get install -y \
-    curl \
-    python3 \
-    python3-pip \
-    git \
-    nodejs \
-    npm
+Install curl and dependencies
+RUN apt-get update && \
+    apt-get install -y curl python3 python3-pip
 
-# Install Vue CLI globally
-RUN npm install -g @vue/cli
+# Install Node.js and Vue CLI
+RUN curl -fsSL https://deb.nodesource.com/setup_20.x | bash - && \
+    apt-get install -y nodejs && \
+    npm install -g @vue/cli
 
-# Install Flask using pip
-RUN pip3 install flask
+# Install Flask with --break-system-packages
+RUN pip3 install flask --break-system-packages
 
 # Set working directory
 WORKDIR /workspace
